--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@ body {font-size:16px;}
   </div>
 <div class="w3-row-padding">
     <div class="w3-half">
-      <img src="/portfolio_v3/resources/avatar_hat.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a hAon">
-      <img src="/portfolio_v3/resources/avatar_hat.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a do">
-      <img src="/portfolio_v3/resources/avatar_hat.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a tri">
+      <embed src="/portfolio_v3/resources/Arcus1MasterPlanExcerpt.pdf" style="width:100%" onclick="onClick(this)" alt="Arcus1MasterPlanExcept">
+      <img src="/portfolio_v3/resources/comingsoon.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a do">
+      <img src="/portfolio_v3/resources/comingsoon.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a tri">
     </div>
 
     <div class="w3-half">
-      <img src="/portfolio_v3/resources/avatar_hat.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a cathair">
-      <img src="/portfolio_v3/resources/avatar_hat.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a cuig">
-      <img src="/portfolio_v3/resources/avatar_hat.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a se">
+      <img src="/portfolio_v3/resources/comingsoon.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a cathair">
+      <img src="/portfolio_v3/resources/comingsoon.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a cuig">
+      <img src="/portfolio_v3/resources/comingsoon.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a se">
     </div>
   </div>
 
