--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ body {font-size:16px;}
   </div>
 <div class="w3-row-padding">
     <div class="w3-half">
-      <embed src="/portfolio_v3/resources/Arcus1MasterPlanExcerpt.pdf" style="width:100%" onclick="onClick(this)" alt="Arcus1MasterPlanExcept">
+      <embed src="/portfolio_v3/resources/Arcus1MasterPlanExcerpt.pdf" style="width:100%" type="application/pdf" onclick="onClick(this)" alt="Arcus1MasterPlanExcept">
       <img src="/portfolio_v3/resources/comingsoon.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a do">
       <img src="/portfolio_v3/resources/comingsoon.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a tri">
     </div>
