--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ body {font-size:16px;}
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col m6 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team2.jpg" alt="CUPPA" style="width:100%">
         <div class="w3-container">
+          <img src="C:\Users\jarcus3\Documents\projects\portfolio_v3\resources\cuppa_logo.png" alt="CUPPA" style="width:180px" style="height:180px">
           <h3>Masters in Urban Planning and Policy</h3>
           <p class="w3-opacity">University of Illinois at Chicago</p>
           <p>Completed May 2020</p>
@@ -124,7 +124,7 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m6 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team1.jpg" alt="DePaul" style="width:100%">
+        <img src="/portfolio_v3/resources/depaul_logo.png" alt="DePaul" style="width:100%">
         <div class="w3-container">
           <h3>B.A. in Geography & Environmental Studies</h3>
           <p class="w3-opacity">DePaul University</p>
@@ -178,9 +178,9 @@ body {font-size:16px;}
   </div>
 <div class="w3-row-padding">
     <div class="w3-half">
-      <embed src="/resources/Arcus1MasterPlanExcerpt.pdf" style="width:100%" type="application/pdf" onclick="onClick(this)" alt="Arcus1MasterPlanExcept">
-      <embed src="/resources/Arcus2EconomicImpact.pdf" style="width:100%" type="application/pdf" onclick="onClick(this)" alt="Obair a do">
-      <embed src="/resources/Arcus3EconCaseStudy.pdf" style="width:100%" type="application/pdf" onclick="onClick(this)" alt="Obair a tri">
+      <img src="resources/Arcus1MasterPlanExcerpt_Page_1.png" style="width:100%" href="resources/Arcus1MasterPlanExcerpt.pdf" onclick="onClick(this)" alt="Arcus1MasterPlanExcept">
+      <img src="resources/Arcus2Thumb.png" style="width:100%" href="resources/Arcus2EconomicImpact.pdf" onclick="onClick(this)" alt="Arcus2EconomicImpact">
+      <img src="resources/Arcus3Thumb.png" style="width:100%" href="resources/Arcus3EconCaseStudy.pdf" onclick="onClick(this)" alt="Arcus3EconCaseStudy">
     </div>
 
     <div class="w3-half">
