--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ body {font-size:16px;}
         <li class="w3-padding-16">Microsoft Excel</li>
         <li class="w3-padding-16">Microsoft Access</li>
         <li class="w3-padding-16">Adobe Suite (Photoshop, Illustrator, Indesign)</li>
-        <li class="w3-padding-16">SPSS</li>
-        <li class="w3-padding-16">SQL</li>
+        <li class="w3-padding-16">Economic Impact Analysis</li>
+        <li class="w3-padding-16">Real Estate Development Finance</li>
       </ul>
     </div>
         
@@ -178,9 +178,12 @@ body {font-size:16px;}
   </div>
 <div class="w3-row-padding">
     <div class="w3-half">
-      <img src="resources/Arcus1MasterPlanExcerpt_Page_1.png" style="width:100%" href="resources/Arcus1MasterPlanExcerpt.pdf" onclick="onClick(this)" alt="Arcus1MasterPlanExcept">
-      <img src="resources/Arcus2Thumb.png" style="width:100%" href="resources/Arcus2EconomicImpact.pdf" onclick="onClick(this)" alt="Arcus2EconomicImpact">
-      <img src="resources/Arcus3Thumb.png" style="width:100%" href="resources/Arcus3EconCaseStudy.pdf" onclick="onClick(this)" alt="Arcus3EconCaseStudy">
+      <a href="resources/Arcus1MasterPlanExcerpt.pdf" target="_blank" alt="Arcus1MasterPlanExcerpt">
+        <img src="resources/Arcus1MasterPlanExcerpt_Page_1.png" style="width:100%" alt="Arcus1MasterPlanExcerpt"></a>
+      <a href="resources/Arcus2EconomicImpact.pdf" target="_blank" alt="Arcus2EconomicImpact">
+        <img src="resources/Arcus2Thumb.png" style="width:100%" alt="Arcus2EconomicImpact"></a>
+      <a href="resources/Arcus3EconCaseStudy.pdf" target="_blank" alt="Arcus3EconCaseStudy">
+        <img src="resources/Arcus3Thumb.png" style="width:100%" alt="Arcus3EconCaseStudy"></a>
     </div>
 
     <div class="w3-half">
