--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ body {font-size:16px;}
     <h1 class="w3-jumbo"><b>Resume</b></h1>
     <h1 class="w3-xxxlarge w3-text-red"><b>About Me</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>As a Masters of Urban Planning and Policy candidate at University of Illinois - Chicago, I combine practical work experience with research and analytical skills.</p>
-    <p>My professional roles have given me firsthand insight into urban economic development with a notable focus on sustainability.</p>
-    <p>My research interests focus on urban housing policy and the implementation of sustainability projects.</p>
+    <p>Versatile & detail-oriented urban planning graduate at the University of Illinois - Chicago with experience in sustainability policy, active transportation planning, and energy-efficient housing.
+      Seeking positions that will utilize my database management, GIS, and analytical skills to desing and implement sustainability programs.
+      Former AmeriCorps member currently employed as a research assistant at the Voorhees Center for Community and Neighborhood Improvement.</p>
   </div>
 
   <!-- Work Experience -->
@@ -112,7 +112,6 @@ body {font-size:16px;}
     <div class="w3-col m6 w3-margin-bottom">
       <div class="w3-light-grey">
         <div class="w3-container">
-          <img src="C:\Users\jarcus3\Documents\projects\portfolio_v3\resources\cuppa_logo.png" alt="CUPPA" style="width:180px" style="height:180px">
           <h3>Masters in Urban Planning and Policy</h3>
           <p class="w3-opacity">University of Illinois at Chicago</p>
           <p>Completed May 2020</p>
@@ -124,7 +123,6 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m6 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/portfolio_v3/resources/depaul_logo.png" alt="DePaul" style="width:100%">
         <div class="w3-container">
           <h3>B.A. in Geography & Environmental Studies</h3>
           <p class="w3-opacity">DePaul University</p>
@@ -141,7 +139,7 @@ body {font-size:16px;}
   <div class="w3-container" id="skills" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Skills</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+    <p>(Draft).</p>
   </div>
 
   <div class="w3-row-padding">
@@ -153,7 +151,7 @@ body {font-size:16px;}
         <li class="w3-padding-16">Microsoft Access</li>
         <li class="w3-padding-16">Adobe Suite (Photoshop, Illustrator, Indesign)</li>
         <li class="w3-padding-16">Economic Impact Analysis</li>
-        <li class="w3-padding-16">Real Estate Development Finance</li>
+        <li class="w3-padding-16">SPSS & SQL</li>
       </ul>
     </div>
         
@@ -174,7 +172,7 @@ body {font-size:16px;}
 <div class="w3-container" id="portfolio" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Portfolio</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+    <p>(Draft).</p>
   </div>
 <div class="w3-row-padding">
     <div class="w3-half">
