--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {font-size:16px;}
     <h1 class="w3-xxxlarge w3-text-red"><b>About Me</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>Versatile & detail-oriented urban planning graduate at the University of Illinois - Chicago with experience in sustainability policy, active transportation planning, and energy-efficient housing.
-      Seeking positions that will utilize my database management, GIS, and analytical skills to desing and implement sustainability programs.
+      Seeking positions that will utilize my database management, GIS, and analytical skills to plan and implement sustainability programs.
       Former AmeriCorps member currently employed as a research assistant at the Voorhees Center for Community and Neighborhood Improvement.</p>
   </div>
 
