--- a/holding.html
+++ b/holding.html
@@ -21,3 +21,44 @@
       <p id="caption"></p>
     </div>
   </div>
+
+
+  <!-- Portfolio grid (modal) -->
+<div class="w3-container" id="portfolio" style="margin-top:75px">
+  <h1 class="w3-xxxlarge w3-text-red"><b>Portfolio</b></h1>
+  <hr style="width:50px;border:5px solid red" class="w3-round">
+</div>
+<div class="w3-row-padding">
+  <div class="w3-half">
+    <a href="resources/Arcus1MasterPlanExcerpt.pdf" target="_blank" alt="Arcus1MasterPlanExcerpt">
+      <img src="resources/Arcus1MasterPlanExcerpt_Page_1.png" style="width:100%" alt="Arcus1MasterPlanExcerpt"></a>
+    <a href="resources/Arcus2EconomicImpact.pdf" target="_blank" alt="Arcus2EconomicImpact">
+      <img src="resources/Arcus2Thumb.png" style="width:100%" alt="Arcus2EconomicImpact"></a>
+    <a href="resources/Arcus3EconCaseStudy.pdf" target="_blank" alt="Arcus3EconCaseStudy">
+      <img src="resources/Arcus3Thumb.png" style="width:100%" alt="Arcus3EconCaseStudy"></a>
+  </div>
+
+  <div class="w3-half">
+    <a href="resources/Arcus4BikePedNet.pdf" target="_blank" alt="Arcus4BikePedNet">
+      <img src="resources/Arcus4Thumb.png" style="width:100%" alt="Arcus3BikePedNet"></a>
+    <a href="resources/Arcus5ModeshareGraphs.pdf" target="_blank" alt="Arcus5ModeshareGraphs">
+      <img src="resources/Arcus5ModeshareGraphs.png" style="width:100%" alt="Arcus5ModeshareGraphs"></a>
+    <a href="resources/Arcus6Poster.pdf" target="_blank" alt="Arcus6Poster">
+      <img src="resources/Arcus6Poster.png" style="width:100%" alt="Arcus6Poster"></a>
+  </div>
+</div>
+
+
+<div class="flip-card">
+  <div class="flip-card-inner" href="resources/Arcus1MasterPlanExcerpt.pdf" target="_blank" alt="Arcus1MasterPlanExcerpt"></div>
+    <div class="flip-card-front">
+      <img src="resources/Arcus1MasterPlanExcerpt_Page_1.png" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>MoveHP (Draft) Excerpt</h1> 
+      <p>Created for: City of Highland Park, IL</p> 
+      <p>Date Created: July 2019</p>
+      <p>Skills Demonstrated: Report & Proposal writing; Design Aptitude; Adobe Suite</p>
+    </div>
+  </div>
+</div>
