--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {font-size:16px;}
     <h1 class="w3-jumbo"><b>Resume</b></h1>
     <h1 class="w3-xxxlarge w3-text-red"><b>About Me</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>Versatile & detail-oriented urban planning graduate at the University of Illinois - Chicago with experience in sustainability policy, active transportation planning, and energy-efficient housing.
+    <p>Versatile & detail-oriented urban planning graduate student at the University of Illinois - Chicago with experience in sustainability policy, active transportation planning, and energy-efficient housing.
       Seeking positions that will utilize my database management, GIS, and analytical skills to plan and implement sustainability programs.
       Former AmeriCorps member currently employed as a research assistant at the Voorhees Center for Community and Neighborhood Improvement.</p>
   </div>
@@ -139,7 +139,6 @@ body {font-size:16px;}
   <div class="w3-container" id="skills" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Skills</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>(Draft).</p>
   </div>
 
   <div class="w3-row-padding">
@@ -172,22 +171,24 @@ body {font-size:16px;}
 <div class="w3-container" id="portfolio" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Portfolio</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>(Draft).</p>
   </div>
 <div class="w3-row-padding">
     <div class="w3-half">
-      <a href="resources/Arcus1MasterPlanExcerpt.pdf" target="_blank" alt="Arcus1MasterPlanExcerpt">
-        <img src="resources/Arcus1MasterPlanExcerpt_Page_1.png" style="width:100%" alt="Arcus1MasterPlanExcerpt"></a>
-      <a href="resources/Arcus2EconomicImpact.pdf" target="_blank" alt="Arcus2EconomicImpact">
-        <img src="resources/Arcus2Thumb.png" style="width:100%" alt="Arcus2EconomicImpact"></a>
+      <a href="resources/Arcus6Poster.pdf" target="_blank" alt="Arcus6Poster">
+        <img src="resources/Arcus6Poster.png" style="width:100%" alt="Arcus6Poster"></a>
+      <a href="resources/Arcus4BikePedNet.pdf" target="_blank" alt="Arcus4BikePedNet">
+        <img src="resources/Arcus4Thumb.png" style="width:100%" alt="Arcus3BikePedNet"></a>
       <a href="resources/Arcus3EconCaseStudy.pdf" target="_blank" alt="Arcus3EconCaseStudy">
         <img src="resources/Arcus3Thumb.png" style="width:100%" alt="Arcus3EconCaseStudy"></a>
     </div>
 
     <div class="w3-half">
-      <img src="/resources/comingsoon.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a cathair">
-      <img src="/resources/comingsoon.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a cuig">
-      <img src="/resources/comingsoon.jpg" style="width:100%" onclick="onClick(this)" alt="Obair a se">
+      <a href="resources/Arcus1MasterPlanExcerpt.pdf" target="_blank" alt="Arcus1MasterPlanExcerpt">
+        <img src="resources/Arcus1MasterPlanExcerpt_Page_1.png" style="width:100%" alt="Arcus1MasterPlanExcerpt"></a>
+      <a href="resources/Arcus5ModeshareGraphs.pdf" target="_blank" alt="Arcus5ModeshareGraphs">
+        <img src="resources/Arcus5ModeshareGraphs.png" style="width:100%" alt="Arcus5ModeshareGraphs"></a>
+      <a href="resources/Arcus2EconomicImpact.pdf" target="_blank" alt="Arcus2EconomicImpact">
+        <img src="resources/Arcus2Thumb.png" style="width:100%" alt="Arcus2EconomicImpact"></a>
     </div>
   </div>
 
@@ -205,16 +206,27 @@ body {font-size:16px;}
     <h1 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>Feel free to contact me using the information below.</p>
-    <h4>Phone</h4><p>224.805.0044</p>
-    <h4>Email</h4><p>arcus.joe@gmail.com</p>
-    <h4>linkedin</h4><p>linkedin.com</p>
+    <div class="w3-row">
+      <div class="w3-col s4 w3 w3-center"><p>
+        <h4>Phone</h4>
+        <p>224.805.0044</p>
+      </p></div>
+      <div class="w3-col s4 w3 w3-center"><p>
+        <h4>Email</h4>
+        <p>arcus.joe@gmail.com</p>
+      </p></div>
+      <div class="w3-col s4 w3 w3-center"><p>
+        <h4>linkedin</h4>
+        <p>linkedin.com/in/joearcus</p>
+      </p></div>
+    </div>
   </div>
 
 <!-- End page content -->
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a> & <a href="https://github.com" title="W3.CSS" target="_blank" class="w3-hover-opacity">Github</a></p></div>
 
 <script>
 // Script to open and close sidebar
