--- a/index.html
+++ b/index.html
@@ -177,18 +177,18 @@ body {font-size:16px;}
       <a href="resources/Arcus6Poster.pdf" target="_blank" alt="Arcus6Poster">
         <img src="resources/Arcus6Poster.png" style="width:100%" alt="Arcus6Poster"></a>
       <a href="resources/Arcus4BikePedNet.pdf" target="_blank" alt="Arcus4BikePedNet">
-        <img src="resources/Arcus4Thumb.png" style="width:100%" alt="Arcus3BikePedNet"></a>
+        <img src="resources/thumb4.pdf" style="width:100%" alt="Arcus3BikePedNet"></a>
       <a href="resources/Arcus3EconCaseStudy.pdf" target="_blank" alt="Arcus3EconCaseStudy">
-        <img src="resources/Arcus3Thumb.png" style="width:100%" alt="Arcus3EconCaseStudy"></a>
+        <img src="resources/thumb3.pdf" style="width:100%" alt="Arcus3EconCaseStudy"></a>
     </div>
 
     <div class="w3-half">
       <a href="resources/Arcus1MasterPlanExcerpt.pdf" target="_blank" alt="Arcus1MasterPlanExcerpt">
-        <img src="resources/Arcus1MasterPlanExcerpt_Page_1.png" style="width:100%" alt="Arcus1MasterPlanExcerpt"></a>
+        <img src="resources/thumb1.pdf" style="width:100%" alt="Arcus1MasterPlanExcerpt"></a>
       <a href="resources/Arcus5ModeshareGraphs.pdf" target="_blank" alt="Arcus5ModeshareGraphs">
         <img src="resources/Arcus5ModeshareGraphs.png" style="width:100%" alt="Arcus5ModeshareGraphs"></a>
       <a href="resources/Arcus2EconomicImpact.pdf" target="_blank" alt="Arcus2EconomicImpact">
-        <img src="resources/Arcus2Thumb.png" style="width:100%" alt="Arcus2EconomicImpact"></a>
+        <img src="resources/thumb2.pdf" style="width:100%" alt="Arcus2EconomicImpact"></a>
     </div>
   </div>
 
