--- a/index.html
+++ b/index.html
@@ -174,22 +174,26 @@ body {font-size:16px;}
   </div>
 <div class="w3-row-padding">
     <div class="w3-half">
-      <a href="resources/Arcus6Poster.pdf" target="_blank" alt="Arcus6Poster">
-        <img src="resources/Arcus6Poster.png" style="width:100%" alt="Arcus6Poster"></a>
-      <a href="resources/Arcus4BikePedNet.pdf" target="_blank" alt="Arcus4BikePedNet">
-        <img src="resources/thumb4.pdf" style="width:100%" alt="Arcus3BikePedNet"></a>
-      <a href="resources/Arcus3EconCaseStudy.pdf" target="_blank" alt="Arcus3EconCaseStudy">
-        <img src="resources/thumb3.pdf" style="width:100%" alt="Arcus3EconCaseStudy"></a>
-    </div>
+      <a href="resources/Samples/Sample1WOPlanPoster.pdf" target="_blank" alt="Arcus1WOPlanPoster">
+        <img src="resources/Thumbnails/thumb1.png" style="width:100%" alt="thumb1"></a>
+      <a href="resources/Samples/Sample2TransportPlanExcerpt.pdf" target="_blank" alt="Arcus2TransportPlanExcerpt">
+        <img src="resources/Thumbnails/thumb2.pdf" style="width:100%" alt="thumb2"></a>
+      <a href="resources/Samples/Sample3CaseStudyRentControl_DRAFT.pdf" target="_blank" alt="Arcus3CastStudyRentControl">
+        <img src="resources/Thumbnails/thumb3.pdf" style="width:100%" alt="thumb3"></a>
+      <a href="resources/Samples/Sample4PlanningEthicsCommentary.pdf" target="_blank" alt="Arcus4PlanningEthicsCommentary">
+        <img src="resources/Thumbnails/thumb4.pdf" style="width:100%" alt="thumb4"></a>
+      </div>
 
     <div class="w3-half">
-      <a href="resources/Arcus1MasterPlanExcerpt.pdf" target="_blank" alt="Arcus1MasterPlanExcerpt">
-        <img src="resources/thumb1.pdf" style="width:100%" alt="Arcus1MasterPlanExcerpt"></a>
-      <a href="resources/Arcus5ModeshareGraphs.pdf" target="_blank" alt="Arcus5ModeshareGraphs">
-        <img src="resources/Arcus5ModeshareGraphs.png" style="width:100%" alt="Arcus5ModeshareGraphs"></a>
-      <a href="resources/Arcus2EconomicImpact.pdf" target="_blank" alt="Arcus2EconomicImpact">
-        <img src="resources/thumb2.pdf" style="width:100%" alt="Arcus2EconomicImpact"></a>
-    </div>
+      <a href="resources/Samples/Sample5WOPlanExcerpt.pdf" target="_blank" alt="Arcus5WOPlanExcerpt">
+        <img src="resources/Thumbnails/thumb5.pdf" style="width:100%" alt="thumb5"></a>
+      <a href="resources/Samples/Sample6EconImpactAnalysis.pdf" target="_blank" alt="Arcus6EconImpactAnalysis">
+        <img src="resources/Thumbnails/thumb6.pdf" style="width:100%" alt="thumb6"></a>
+      <a href="resources/Samples/Sample7LitReviewWeatherization.pdf" target="_blank" alt="Arcus7LitReviewWeatherization">
+        <img src="resources/Thumbnails/thumb7.pdf" style="width:100%" alt="thumb7"></a>
+      <a href="resources/Samples/Sample8PortfolioDesign.pdf" target="_blank" alt="Arcus8PortfolioDesign">
+        <img src="resources/Thumbnails/thumb8.pdf" style="width:100%" alt="thumb8"></a>
+      </div>
   </div>
 
   <!-- Modal for full size images on click-->
