--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@ body {font-size:16px;}
     <h1 class="w3-jumbo"><b>Resume</b></h1>
     <h1 class="w3-xxxlarge w3-text-red"><b>About Me</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>Versatile & detail-oriented urban planning graduate student at the University of Illinois - Chicago with experience in sustainability policy, active transportation planning, and energy-efficient housing.
-      Seeking positions that will utilize my database management, GIS, and analytical skills to plan and implement sustainability programs.
-      Former AmeriCorps member currently employed as a research assistant at the Voorhees Center for Community and Neighborhood Improvement.</p>
+    <p>
+      Urban planner with experience in sustainability policy, active transportation planning, and energy-
+      efficient housing, and a track record of versatility, attention to detail, and bringing projects in on time
+      seeks position that will utilize my database management, GIS, and analytical skills to plan and
+      implement sustainability programs. Master’s degree, University of Illinois at Chicago; Research assistant,
+      Voorhees Center for Community and Neighborhood Improvement, Chicago; former intern, City of
+      Highland Park, IL; former AmeriCorps member, City of Knoxville, TN.</p>
   </div>
 
   <!-- Work Experience -->
@@ -66,9 +70,9 @@ body {font-size:16px;}
         <h4 class="w3-opacity">Natalie P. Voorhees Center for Neighborhood and Community Improvement</h4>
         <h5>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h5>
         <p>Graduate-level research assistantship (25% time); tuition waiver.
-          Gather, process, and analyze industry-level data in estimating the Chicago-area clean economy.
-          Research and analyze industry reports from key clean economy sectors including solar and wind energy.
-          Gather, process, and map block group-level data on disability and transit access in select American cities.
+          Gathered, processed, and analyzed industry-level data in estimating the Chicago-area clean economy.
+          Researched and analyzed industry reports from key clean economy sectors including solar and wind energy.
+          Gathered, processed, and maped block group-level data on disability and transit access in select American cities.
         <p>Supervisor: Dr. Janet Smith, Director. 312.996.6336 / janets@uic.edu.</p>
         </p>
         <hr>
@@ -79,10 +83,10 @@ body {font-size:16px;}
         <h5>Nov 2018 - Aug 2019</h5>
         <p>Graduate level internship, part time.
             Researched and analyzed land use decisions.
-            Research, content creation, and editing role in active transportation plan update, MoveHP.
+            Held a research, content creation, and editing role in active transportation plan update, MoveHP.
             Reviewed applications for historic preservation projects and design reviews.
             Wrote weekly and monthly newsletter articles.
-            Projects included: Researched tax impact of multifamily and industrial land uses; map of bicycle crashes in Highland Park; created a Storymap of historic homes.
+            Projects included: Researched tax impact of multifamily and industrial land uses; created map of bicycle crashes in Highland Park; created a Storymap of historic homes.
         <p>Supervisor: Mr. Drew Awsumb, Deputy Director. 847.432.0867 / dawsumb@cityhpil.com.</p>
         </p>
         <hr>
@@ -117,7 +121,7 @@ body {font-size:16px;}
           <p>Completed May 2020</p>
           <p>Concentration: Economic Development</p>
           <p>Overall GPA: 3.7/4.0</p>
-          <p>Graduated <i>Magna Cum Laude</i></p>
+          <p>Independent Study: Weatherization and Capacity-building in Knoxville, Tenneesee</p>
         </div>
       </div>
     </div>
@@ -158,11 +162,11 @@ body {font-size:16px;}
       <ul class="w3-ul w3-light-grey w3-center">
         <li class="w3-red w3-xlarge w3-padding-32">Soft</li>
         <li class="w3-padding-16">Report & Proposal Writing</li>
-        <li class="w3-padding-16">Adaptability</li>
+        <li class="w3-padding-16">Adaptable</li>
         <li class="w3-padding-16">Willingness to Learn</li>
         <li class="w3-padding-16">Design Aptitude</li>
-        <li class="w3-padding-16">Honesty</li>
-        <li class="w3-padding-16">Deadline Conscious</li>
+        <li class="w3-padding-16">Integrity</li>
+        <li class="w3-padding-16">Time Management</li>
       </ul>
     </div>
   </div>
