--- a/index.html
+++ b/index.html
@@ -52,55 +52,50 @@ body {font-size:16px;}
     <h1 class="w3-jumbo"><b>Resume</b></h1>
     <h1 class="w3-xxxlarge w3-text-red"><b>About Me</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>
-      Urban planner with experience in sustainability policy, active transportation planning, and energy-
-      efficient housing, and a track record of versatility, attention to detail, and bringing projects in on time
-      seeks position that will utilize my database management, GIS, and analytical skills to plan and
-      implement sustainability programs. Master’s degree, University of Illinois at Chicago; Research assistant,
-      Voorhees Center for Community and Neighborhood Improvement, Chicago; former intern, City of
-      Highland Park, IL; former AmeriCorps member, City of Knoxville, TN.</p>
+    <p>Urban planner with experience in sustainability policy, land use, and active transportation -
+      possessing a track record of versatility, attention to detail, and bringing projects in on time - seeks
+      position that will utilize my analytic, database management, and geospatial skills to plan
+      sustainable places.</p>
   </div>
 
   <!-- Work Experience -->
   <div class="w3-container" id="work" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Work Experience</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <div class="w3-container">
-        <h3 class="w3-opacity"><b>Research Assistant</b></h3>
-        <h4 class="w3-opacity">Natalie P. Voorhees Center for Neighborhood and Community Improvement</h4>
-        <h5>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h5>
-        <p>Graduate-level research assistantship (25% time); tuition waiver.
-          Gathered, processed, and analyzed industry-level data in estimating the Chicago-area clean economy.
-          Researched and analyzed industry reports from key clean economy sectors including solar and wind energy.
-          Gathered, processed, and maped block group-level data on disability and transit access in select American cities.
-        <p>Supervisor: Dr. Janet Smith, Director. 312.996.6336 / janets@uic.edu.</p>
-        </p>
+      <div class="w3-container">
+        <h3 class="w3-opacity"><b>Senior Planner for Sustainability</b></h3>
+        <h4 class="w3-opacity">Lake County, Illinois</h4>
+        <h5>June 2021 - <span class="w3-tag w3-teal w3-round">Current</span></h5>
+        <p>Research and develop four countywide sustainable development policies utilizing input from key stakeholders including residents, partner organizations, and elected officials.</p>
+        <p>Negotiate and manage contracts for waste hauling services covering approximately 25,000 households across 8 townships while addressing concerns by residents and elected officials.</p>
+        <p>Collaborate with other county departments to plan and evaluate operational performance in single-use plastic reduction and sustainable building.</p>
         <hr>
       </div>
       <div class="w3-container">
-        <h3 class="w3-opacity"><b>Planning Intern</b></h3>
+        <h3 class="w3-opacity"><b>Research Assistant</b></h3>
+        <h4 class="w3-opacity">Natalie P. Voorhees Center for Neighborhood and Community Improvement</h4>
+        <h5>June 2019 - Aug 2020</h5>
+        <p>Co-authored <a href="https://voorheescenter.uic.edu/reports/#chicagos-clean-energy-future" class="w3-text-blue" class="w3-hover-purple">Chicago’s Clean Energy Future</a>, a study of the Chicago-area clean energy economy.</p>
+        <p>Analyzed industry-level data to study labor market trends and regional specialization by collecting and processing Bureau of Labor Statistics data.</p>
+        <p>Collated industry reports from key clean energy economy sectors to evaluate nationwide trends and local opportunities for solar and wind energy generation.</p>
+        <hr>
+      </div>
+      <div class="w3-container">
+        <h3 class="w3-opacity"><b>Graduate Planning Intern</b></h3>
         <h4 class="w3-opacity">Planning Department, City of Highland Park, IL</h4>
         <h5>Nov 2018 - Aug 2019</h5>
-        <p>Graduate level internship, part time.
-            Researched and analyzed land use decisions.
-            Held a research, content creation, and editing role in active transportation plan update, MoveHP.
-            Reviewed applications for historic preservation projects and design reviews.
-            Wrote weekly and monthly newsletter articles.
-            Projects included: Researched tax impact of multifamily and industrial land uses; created map of bicycle crashes in Highland Park; created a Storymap of historic homes.
-        <p>Supervisor: Mr. Drew Awsumb, Deputy Director. 847.432.0867 / dawsumb@cityhpil.com.</p>
-        </p>
+        <p>Co-wrote <a href="https://www.cityhpil.com/projects_detail_T22_R33.php" class="w3-text-blue" class="w3-hover-purple">MoveHP</a>, an active transportation plan, for city council review including infrastructure best practice research, graphic content creation, and editing.</p>
+        <p>Utilized GIS to identify gaps in transportation infrastructure and pedestrian crash hotspots to propose potential solutions improving user safety and satisfaction.</p>
+        <p>Reviewed applications for historic preservation projects and design review for 50% of time.</p>
         <hr>
       </div>
       <div class="w3-container">
         <h3 class="w3-opacity"><b>Project Coordinator</b></h3>
         <h4 class="w3-opacity">Office of Sustainability, City of Knoxville, TN</h4>
         <h5>Nov 2018 - Aug 2019</h5>
-        <p>Year of national service with AmeriCorps.
-            Managed energy databases for municipal operations.
-            Analyzed data for Office of Sustainability projects, and assisted in data analysis for other city operations.
-            Projects included: electric bus research, cost forecasting, and grant application; draft city policy on community gardens; management of LED streetlight conversion.
-        <p>Supervisor: Mr. Brian Blackmon, Director. 865.215.4430 / bblackmon@knoxvilletn.gov.</p>
-        </p>
+        <p>Identified opportunities for energy savings by managing energy databases for municipal operations, resulting in 25% saved from 2005 levels.</p>
+        <p>Planned the conversion of approximately 29,500 streetlights to LED technology utilizing GIS and energy forecasting resulting in annual municipal energy and budgetary savings of approximately 65%.</p>
+        <p>Co-wrote grant application for a small electric bus fleet by conducting market research, cost forecasting, and interviewing peer cities for evaluations of current fleets.</p>
         <hr>
       </div>
   </div>
@@ -121,7 +116,6 @@ body {font-size:16px;}
           <p>Completed May 2020</p>
           <p>Concentration: Economic Development</p>
           <p>Overall GPA: 3.7/4.0</p>
-          <p>Independent Study: Weatherization and Capacity-building in Knoxville, Tenneesee</p>
         </div>
       </div>
     </div>
@@ -131,9 +125,8 @@ body {font-size:16px;}
           <h3>B.A. in Geography & Environmental Studies</h3>
           <p class="w3-opacity">DePaul University</p>
           <p>Completed May 2017</p>
-          <p>Concentration: Sustainability Studies</p>
+          <p>Concentration: Sustainability</p>
           <p>Overall GPA: 3.6/4.0</p>
-          <p>Graduated <i>Cum Laude</i></p>
         </div>
       </div>
     </div>
@@ -148,7 +141,7 @@ body {font-size:16px;}
   <div class="w3-row-padding">
     <div class="w3-half w3-margin-bottom">
       <ul class="w3-ul w3-light-grey w3-center">
-        <li class="w3-dark-grey w3-xlarge w3-padding-32">Hard</li>
+        <li class="w3-dark-grey w3-xlarge w3-padding-32">Technical</li>
         <li class="w3-padding-16">GIS (ESRI products)</li>
         <li class="w3-padding-16">Microsoft Excel</li>
         <li class="w3-padding-16">Microsoft Access</li>
@@ -160,7 +153,7 @@ body {font-size:16px;}
         
     <div class="w3-half">
       <ul class="w3-ul w3-light-grey w3-center">
-        <li class="w3-red w3-xlarge w3-padding-32">Soft</li>
+        <li class="w3-red w3-xlarge w3-padding-32">Core</li>
         <li class="w3-padding-16">Report & Proposal Writing</li>
         <li class="w3-padding-16">Adaptable</li>
         <li class="w3-padding-16">Willingness to Learn</li>
@@ -225,7 +218,7 @@ body {font-size:16px;}
       </p></div>
       <div class="w3-col s4 w3 w3-center"><p>
         <h4>linkedin</h4>
-        <p>linkedin.com/in/joearcus</p>
+        <p><a href="https://www.linkedin.com/in/joearcus/" class="w3-text-blue" class="w3-hover-purple">linkedin.com/in/joearcus</a></p>
       </p></div>
     </div>
   </div>
